--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -299,8 +299,8 @@
                         <div class="text-danger small">{{ form_errors(registrationForm.email) }}</div>
                     </div>
                     <div class="form-group">
-                        {{ form_label(registrationForm.telephone, 'Téléphone (+217)', {'label_attr': {'class': 'form-label'}}) }}
-                        {{ form_widget(registrationForm.telephone, {'attr': {'class': 'form-control', 'placeholder': '+217'}}) }}
+                        {{ form_label(registrationForm.telephone, 'Téléphone', {'label_attr': {'class': 'form-label'}}) }}
+                        {{ form_widget(registrationForm.telephone, {'attr': {'class': 'form-control', 'placeholder': '+33 6 12 34 56 78'}}) }}
                         <div class="text-danger small">{{ form_errors(registrationForm.telephone) }}</div>
                     </div>
                     <div class="form-group">
