--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,15 +40,15 @@
         }
         
         .navbar-brand img {
-            height: 70px;
+            height: 300px;
             width: auto;
-            margin-right: 12px;
+            margin-right: 15px;
         }
         
         .brand-text {
             color: var(--primary-green);
             font-weight: 800;
-            font-size: 1.5rem;
+            font-size: 1.8rem;
             letter-spacing: 1px;
         }
         
@@ -82,7 +82,7 @@
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom sticky-top">
         <div class="container">
             <a class="navbar-brand" href="{{ path('app_home') }}">
-                <img src="{{ asset('images/logo_hand.png') }}" alt="FIRMETNA Logo">
+                <img src="{{ asset('images/logo_new_v1.png') }}" alt="FIRMETNA Logo">
                 <span class="brand-text">FIRMETNA</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
